# kerneldex

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md
examples/: README.md  trivial_add.py
src/kerneldex/: __init__.py  __main__.py  _preload.py  cli.py  coverage.py  disasm.py  histogram.py  hook.py  ingest.py  paths.py  report.py
tests/: README.md  test_smoke.py
